# NervScansFusion

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
.github/workflows/: build.yml
Resources/: NervScansFusionIcon.icns
installer/windows/: setup.iss
